@@ -1,3 +1,9 @@
+Mon Jul 16 11:18:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Check for KeyError when accessing
+	  list of field actions, and behave as if an empty list was found
+	  if the field is unknown.
+
 Fri Jul 13 16:39:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Add an option to query_filter to
